--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,4 @@
 <resources>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="new_message_notification_title_template">New message: %1$s</string>
 
@@ -14,7 +12,6 @@
 
     <string name="action_share">Share</string>
     <string name="action_reply">Reply</string>
-
 
 
     <!-- 全局 -->
@@ -134,5 +131,9 @@
     <string name="no_sdcard_found_could_not_upgrade">您的手机未发现SD卡，将进行无法更新</string>
     <string name="check_new_version_failed">检查版本更新失败</string>
     <string name="is_already_latest_version">已安装最新版本</string>
+
+    <!-- 新闻资讯 -->
+    <string name="testButton">测试 Okhttp</string>
+
 
 </resources>
